--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 
 [dependencies]
+color_processing = "0.6.2"
 image = "0.24.5"
 num = "0.4.0"
 serde = {version = "1.0.152", features = ["derive"]}
