--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 color_processing = "0.6.2"
 image = "0.24.5"
 num = "0.4.0"
+rayon = "1.6.1"
 serde = {version = "1.0.152", features = ["derive"]}
 toml = "0.5.11"
