--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,10 @@
-width = 2048
-height = 2048
+width = 512
+height = 512
 scale_fac = 1
-fractal_type = "Mandelbrot"
-julia_r = -1.476
-julia_i = 0
-contrast = 1
-colors = true
+fractal_type = "Julia"
+julia_r = 0.6
+julia_i = 0.55
+contrast = 2
+colors = false
 colors_saturation = 1.0
 colors_value = 0.5
